--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         aut nesciunt! Neque praesentium quam magni ad 
         accusantium voluptas ea rem? Cum officia quam cupiditate soluta, consequuntur
          accusamus!</P>
+         <h2>OGE IS LEARNING</h2>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+             Ea esse minima assumenda eos, 
+             ipsam eius totam inventore? Recusandae, harum nobis!</p>
 </body>
 </html>
