I added form username

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
              Ea esse minima assumenda eos, 
              ipsam eius totam inventore? Recusandae, harum nobis!</p>
+             <form action="">
+                 <input type="text" placeholder="yourname">
+             </form>
 </body>
 </html>
