--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
              Ea esse minima assumenda eos, 
              ipsam eius totam inventore? Recusandae, harum nobis!</p>
+             <h3>This is Grace</h3>
+             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, a!</p>
 </body>
 </html>
